small scrolling fix on mobile nav pt2

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -87,8 +87,6 @@ body
   background: $bg-color
   font-size: 20px
 
-  overflow: hidden
-
   line-height: 1.6
   font-family: Raleway, Helvetica, sans-serif
   color: $text-color
